# indexfs

./: .travis.yml_0  AUTHORS  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/indexfs/: indexfs_api.h  indexfs_config.h.in
src/: CMakeLists.txt
src/libindexfs/: CMakeLists.txt  indexfs_api.cc  indexfs_api_test.cc
